sort.basic.lessons.sort.basic.insertion.AlgInsertionSort.scala.error
AlgInsertionSort:6: error: not found: value v
    while(c>=1 && getValeur(c-1)>v){
                                 ^